# Quyan-RemoteTerminalCloud

./: .env.development.example  .env.example  .env.production  .env.production.example  .gitignore  AGENTS.md  Cargo.toml  README.md  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/docker/: ci.Dockerfile
.github/workflows/: auto-label.yml  auto-pr.yml  build-ci-image.yml  build-multi-platform.yml  ci.yml
apps/rtc-agent-desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/rtc-agent-desktop/public/mock/: status.json
apps/rtc-agent-desktop/src/: App.vue  styles.css  types.ts
apps/rtc-agent-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/rtc-agent-desktop/src-tauri/icons/: icon.icns
apps/rtc-agent-desktop/src-tauri/nsis/: installer.nsi
apps/rtc-agent-desktop/src-tauri/src/: lib.rs  main.rs
apps/rtc-agent-desktop/src/components/: DesktopMainPanel.vue  DesktopSidebar.vue  DesktopTopbar.vue
apps/rtc-agent-desktop/src/composables/: useDesktopAgent.ts
apps/rtc-agent-installer/: Cargo.toml
apps/rtc-agent-installer/src/: main.rs
apps/rtc-agentd/: Cargo.toml
apps/rtc-agentd/src/: main.rs  path_ops.rs  support.rs
cmd/rtc-agent/: main.go
cmd/rtc-agent-installer/: main.go
cmd/rtc-agent-manager/: main.go  main_windows.go
cmd/rtc-release/: main.go
crates/rtc-agent-config/: Cargo.toml
crates/rtc-agent-config/src/: lib.rs
crates/rtc-agent-packaging/: Cargo.toml
crates/rtc-agent-packaging/src/: lib.rs
crates/rtc-agent-platform/: Cargo.toml
crates/rtc-agent-platform/src/: lib.rs
crates/rtc-agent-preferences/: Cargo.toml
crates/rtc-agent-preferences/src/: lib.rs
crates/rtc-agent-protocol/: Cargo.toml
crates/rtc-agent-protocol/src/: host.rs  lib.rs  preferences.rs  session.rs
crates/rtc-agent-runtime/: Cargo.toml
crates/rtc-agent-runtime/src/: lib.rs  shell.rs
crates/rtc-agent-runtime/tests/: mock_backend.rs
crates/rtc-agent-service/: Cargo.toml
crates/rtc-agent-service/src/: lib.rs  linux.rs  macos.rs  types.rs  windows.rs
docs/: AGENT_DEPLOYMENT_FOUNDATION.md  AGENT_PLATFORM_MATRIX.md  ARCHITECTURE.md  PORTABLE.md  ROADMAP.md  SECURITY.md
internal/agent/: api.go  config.go  manager.go  platform.go  preferences.go  process.go  sessions.go  shells.go  tunnel.go  windows_service_admin.go
internal/buildinfo/: version.go
internal/protocol/: messages.go  types.go
packaging/linux/: agent.config.json  agent.env.example  build-deb.sh  install-service.sh  remote-terminal-cloud-agent.service  uninstall-service.sh
packaging/macos/: agent.config.json  agent.env.example  build-pkg.sh  com.remote-terminal-cloud.agent.plist  install-service.sh  uninstall-service.sh
packaging/windows/: README.md  RemoteTerminalCloudAgentService.xml  agent.config.json  download-winsw.ps1  init-config.ps1  install-service.ps1  launch-manager.vbs  manage-agent-ui.ps1  manage-agent.ps1  stop-service.ps1  uninstall-service.ps1  write-config.ps1
packaging/windows/nsis/: agent.nsi  build-installer.ps1  prepare-installer-stage.ps1
packaging/windows/wix/: AgentConfigDlg.wxs  RemoteTerminalCloudAgent.wxs  build-msi.ps1  prepare-msi-stage.ps1
scripts/: build-release-bundle.mjs  bump-version.sh  package-platform-artifact.mjs
src/: api.ts  config.ts  index.ts  platform.ts  preferences.ts  process.ts  shellSessionManager.ts  shells.ts  tunnel.ts
xtask/: Cargo.toml
xtask/src/: main.rs
