[workspace]
resolver = "2"
members = [
  "crates/rtc-agent-protocol",
  "crates/rtc-agent-config",
  "crates/rtc-agent-platform",
  "crates/rtc-agent-preferences",
  "crates/rtc-agent-runtime",
  "crates/rtc-agent-service",
  "crates/rtc-agent-packaging",
  "apps/rtc-agentd",
  "apps/rtc-agent-installer",
  "apps/rtc-agent-desktop/src-tauri",
  "xtask",
]

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "MIT"
authors = ["Remote Terminal Cloud"]
repository = "https://github.com/remote-terminal-cloud/agent"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
hostname = "0.4.1"
portable-pty = "0.9.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri-build = "2.5.1"
tauri = { version = "2.9.2" }
tauri-plugin-shell = "2.3.3"
tauri-plugin-opener = "2.5.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "process", "time", "io-util", "sync"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
url = "2.5.7"
which = "8.0.0"
