[package]
name = "rtc-agent-installer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rtc-agent-config = { path = "../../crates/rtc-agent-config" }
rtc-agent-service = { path = "../../crates/rtc-agent-service" }
serde.workspace = true
serde_json.workspace = true

