[package]
name = "rtc-agentd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rtc-agent-config = { path = "../../crates/rtc-agent-config" }
rtc-agent-platform = { path = "../../crates/rtc-agent-platform" }
rtc-agent-preferences = { path = "../../crates/rtc-agent-preferences" }
rtc-agent-protocol = { path = "../../crates/rtc-agent-protocol" }
rtc-agent-runtime = { path = "../../crates/rtc-agent-runtime" }
rtc-agent-service = { path = "../../crates/rtc-agent-service" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
