[package]
name = "rtc-agent-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
rtc-agent-protocol = { path = "../rtc-agent-protocol" }

