[package]
name = "rtc-agent-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
dotenvy.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
rtc-agent-protocol = { path = "../rtc-agent-protocol" }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

