[package]
name = "rtc-agent-packaging"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
flate2 = "1.1.5"
reqwest = { workspace = true, features = ["blocking"] }
rtc-agent-config = { path = "../rtc-agent-config" }
serde.workspace = true
serde_json.workspace = true
tar = "0.4.44"
time = { version = "0.3.44", features = ["formatting"] }
which.workspace = true
zip = "6.0.0"
