[package]
name = "rtc-agent-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
hostname.workspace = true
rtc-agent-protocol = { path = "../rtc-agent-protocol" }
serde.workspace = true
tokio.workspace = true
which.workspace = true

[dev-dependencies]
serde_json.workspace = true
