[package]
name = "rtc-agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
portable-pty.workspace = true
reqwest.workspace = true
rtc-agent-config = { path = "../rtc-agent-config" }
rtc-agent-platform = { path = "../rtc-agent-platform" }
rtc-agent-preferences = { path = "../rtc-agent-preferences" }
rtc-agent-protocol = { path = "../rtc-agent-protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
