[package]
name = "rtc-agent-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rtc_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
rtc-agent-config = { path = "../../../crates/rtc-agent-config" }
serde.workspace = true
serde_json.workspace = true
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-opener.workspace = true
tauri-plugin-shell.workspace = true
tokio.workspace = true

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
